Fix #41: Revamp the API to use more generic API structure.